--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,7 +1,10 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 17)
+
+project(test_cmake)
 
 set(SOURCE test_cmake.cpp)
 add_executable(app ${SOURCE})
+
 target_include_directories(app PUBLIC "${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/json")
 target_link_libraries(app person)
